# models/humiditymodel.go
@@ -30,7 +30,7 @@ type ReqAddHumidity struct {
 	Value float32 `json:"valore" validate:"required"`
 }
 
-// swagger:parameters add Humidity
+// swagger:parameters addHumidity
 type ReqHumidityBody struct {
 	// - name: body
 	//  in: body
@@ -119,15 +119,14 @@ func PostHumiditySqlx(db *sql.DB, reqHumidity *ReqAddHumidity) (*Humidity, strin
 
 	//sqlStatement := fmt.Sprintf("insert into 'pioggia' ('valore','data_inserimento') values (%d,CURRENT_TIMESTAMP) RETURNING id", value)
 	sqlStatement := fmt.Sprintf(constants.HUMIDITY_POST_DATA, value)
-
+	log.Println(sqlStatement)
 	err := db.QueryRow(sqlStatement).Scan(&lastInsertId)
 
 	if err != nil {
 		return &humidity, ErrHandler(err)
 	}
 
-	sqlStatement1 := fmt.Sprintf(constants.HUMIDITY_GET_LAST, lastInsertId)
-	rows, err := db.Query(sqlStatement1)
+	rows, err := db.Query(constants.HUMIDITY_GET_LAST)
 
 	if err != nil {
 		log.Fatal(err)
